--- a/MCON_232_FQ_Mod_3_Strings_Class_3.ipynb
+++ b/MCON_232_FQ_Mod_3_Strings_Class_3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMr+77VHlM53dK4rrKbjLsD",
+      "authorship_tag": "ABX9TyOlJU655PxG5Wz8du6vuphE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Please give yourself time for this homework : Target: 75 minutes - 2 hours."
+        "### Please give yourself time for this homework : 2 - 3 hours.  Pace yourself, you do not have to finish this in one sitting, you may use any support you would like other than AI"
       ],
       "metadata": {
         "id": "pzmAha3xcctZ"
@@ -245,6 +245,140 @@
         "apple  |  3\n",
         "banana | 12\n",
         "```\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "1WBnoHPflAIL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "tags": [],
+        "id": "242f7ba6"
+      },
+      "outputs": [],
+      "source": [
+        "!tail pg345_cleaned_100_lines.txt"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "adb78357"
+      },
+      "source": [
+        "### Exercise\n",
+        "\n",
+        "\"Wordle\" is an online word game where the objective is to guess a five-letter word in six or fewer attempts.\n",
+        "Each attempt has to be recognized as a word, not including proper nouns.\n",
+        "After each attempt, you get information about which of the letters you guessed appear in the target word, and which ones are in the correct position.\n",
+        "\n",
+        "For example, suppose the target word is `MOWER` and you guess `TRIED`.\n",
+        "You would learn that `E` is in the word and in the correct position, `R` is in the word but not in the correct position, and `T`, `I`, and `D` are not in the word.\n",
+        "\n",
+        "As a different example, suppose you have guessed the words `SPADE` and `CLERK`, and you've learned that `E` is in the word, but not in either of those positions, and none of the other letters appear in the word.\n",
+        "Of the words in the word list, how many could be the target word?\n",
+        "Write a function called `check_word` that takes a five-letter word and checks whether it could be the target word, given these guesses."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "87fdf676"
+      },
+      "source": [
+        "You can use this function if you find it useful :"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "tags": [],
+        "id": "8d19b6ce"
+      },
+      "outputs": [],
+      "source": [
+        "def uses_any(word, letters):\n",
+        "    for letter in word.lower():\n",
+        "        if letter in letters.lower():\n",
+        "            return True\n",
+        "    return False"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "tags": [],
+        "id": "63593f1b"
+      },
+      "source": [
+        "You can use the following loop to test your function."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# run this line once to download the word.txt file so that you can then open it.\n",
+        "download('https://raw.githubusercontent.com/AllenDowney/ThinkPython/v3/words.txt');"
+      ],
+      "metadata": {
+        "id": "u5BkobXtlwRn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "tags": [],
+        "id": "9bbf0b1c"
+      },
+      "outputs": [],
+      "source": [
+        "for line in open('words.txt'):\n",
+        "    word = line.strip()\n",
+        "    if len(word) == 5 and check_word(word):\n",
+        "        print(word)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Solution goes here"
+      ],
+      "metadata": {
+        "id": "El1I7aGkmMiJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "d009cb52"
+      },
+      "source": [
+        "### Exercise\n",
+        "\n",
+        "Continuing the previous exercise, suppose you guess the work `TOTEM` and learn that the `E` is *still* not in the right place, but the `M` is. How many words are left?"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "925c7aa9"
+      },
+      "outputs": [],
+      "source": [
+        "# Solution goes here"
       ]
     },
     {
