--- a/MCON_232_FQ_Mod_3_Strings_Class_3.ipynb
+++ b/MCON_232_FQ_Mod_3_Strings_Class_3.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOlJU655PxG5Wz8du6vuphE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -325,36 +324,70 @@
       "cell_type": "code",
       "source": [
         "# run this line once to download the word.txt file so that you can then open it.\n",
+        "from os.path import basename, exists\n",
+        "\n",
+        "def download(url):\n",
+        "    filename = basename(url)\n",
+        "    if not exists(filename):\n",
+        "        from urllib.request import urlretrieve\n",
+        "\n",
+        "        local, _ = urlretrieve(url, filename)\n",
+        "        print(\"Downloaded \" + str(local))\n",
+        "    return filename\n",
+        "\n",
+        "download('https://github.com/AllenDowney/ThinkPython/raw/v3/thinkpython.py');\n",
+        "download('https://github.com/AllenDowney/ThinkPython/raw/v3/diagram.py');\n",
+        "\n",
+        "import thinkpython\n",
+        "\n",
+        "\n",
         "download('https://raw.githubusercontent.com/AllenDowney/ThinkPython/v3/words.txt');"
       ],
       "metadata": {
-        "id": "u5BkobXtlwRn"
+        "id": "u5BkobXtlwRn",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1abfa692-20c6-47bf-c2d0-7ea60ea005d2"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloaded thinkpython.py\n",
+            "Downloaded diagram.py\n",
+            "Downloaded words.txt\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Solution goes here\n",
+        "def check_word(word):\n",
+        "  pass"
+      ],
+      "metadata": {
+        "id": "El1I7aGkmMiJ"
       },
       "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "tags": [],
-        "id": "9bbf0b1c"
-      },
-      "outputs": [],
       "source": [
+        "# Test your code here\n",
+        "\n",
         "for line in open('words.txt'):\n",
         "    word = line.strip()\n",
         "    if len(word) == 5 and check_word(word):\n",
         "        print(word)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Solution goes here"
       ],
       "metadata": {
-        "id": "El1I7aGkmMiJ"
+        "id": "Uw_Y4qRiZ12B"
       },
       "execution_count": null,
       "outputs": []
